--- a/index.html
+++ b/index.html
@@ -57,33 +57,69 @@ const data = new Uint8Array(4 * W * H);
 for (let i = 0; i < data.length; ++i) data[i] = i%4 === 3 ? 255 : pal.colors[15].toArray[i%4];
 const texture = new THREE.DataTexture(data, W, H);
 texture.needsUpdate = true;
-
 camera = new THREE.OrthographicCamera(-1, 1, 1, -1, 0, 1);
 scene = new THREE.Scene();
 const geometry = new THREE.PlaneGeometry(2, 2);
-const material = new THREE.ShaderMaterial({
-  uniforms: {tex: { value: texture } },
-  vertexShader: `
+
+const DEFAULTSHADER = `
+#if defined(VERTEX)
 varying vec2 vUv;
 void main() {
   vUv = uv;
   gl_Position = vec4(position, 1.0);
 }
- `,
-  fragmentShader: `
+#endif
+#if defined(FRAGMENT)
 varying vec2 vUv;
-uniform sampler2D tex;
+uniform sampler2D Texture;
 void main() {
-  gl_FragColor = vec4(vUv.x,vUv.y,1,1);
-  gl_FragColor = texture2D(tex, vec2(vUv.x, 1.0-vUv.y));
+  gl_FragColor = texture2D(Texture, vec2(vUv.x, 1.0-vUv.y));
 }
- `,
-});
-const mesh = new THREE.Mesh(geometry, material);
+#endif
+`;
+
+function makeShader(g) {
+  return new THREE.ShaderMaterial({
+    uniforms: {
+      Texture: { value: texture },
+      TextureSize: { value: [30, 30] },
+      InputSize: { value: [30, 30] },
+      OutputSize: { value: [480, 480] },
+      FrameCount: { value: 0 },
+      MVPMatrix: { value: [
+        1.0, 0.0, 0.0, 0.0,
+        0.0, 1.0, 0.0, 0.0,
+        0.0, 0.0, 1.0, 0.0,
+        0.0, 0.0, 0.0, 1.0 ] },
+    },
+    vertexShader: '#define VERTEX 1\n' + g,
+    fragmentShader: '#define FRAGMENT 1\n' + g,
+  });
+}
+function setShader(m) {
+  mesh.material = m;
+  renderer.render(scene, camera);
+}
+
+SHADERS = 'none xbrz-freescale'.split(/ /);
+async function loadShader(g) {
+  if (g === 'none') {
+    return DEFAULTSHADER;
+  } else {
+    const r = await fetch(g);
+    if (!r.ok) {
+      throw new Error('fetch failed');
+    }
+    return await r.text();
+  }
+}
+
+const mesh = new THREE.Mesh(geometry, makeShader(DEFAULTSHADER));
 scene.add(mesh);
 renderer = new THREE.WebGLRenderer({ canvas: c });
 renderer.setPixelRatio( window.devicePixelRatio );
 renderer.setSize(480, 480);
 renderer.render(scene, camera);
 
+loadShader('xbrz-freescale.glsl').then(g => setShader(makeShader(g)));
 </script>
