--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<select id="shadersdropdown" v-on:change="shaderSelected">
-  <option v-for="s in shaders" v-bind:value="s">{{ s }}</option>
-</select>
-<div id="palette">
-  <span
-    v-for="c in colors"
-    v-bind:style="'background-color: #' + c.getHexString()"
-    v-on:click="colorClicked(c)"
-  ></span>
+<div id="app">
+  <select id="shadersdropdown" v-on:change="shaderSelected">
+    <option v-for="s in shaders" v-bind:value="s">{{ s }}</option>
+  </select>
+  <select id="palettesdropdown" v-on:change="paletteSelected">
+    <option v-for="p in palettes" v-bind:value="p">{{ p }}</option>
+  </select>
+  <button v-on:click="clear">clear</button>
+  <div id="palette">
+    <span
+      v-for="c in colors"
+      v-bind:style="'background-color: #' + c.getHexString()"
+      v-on:click="colorClicked(c)"
+    ></span>
+  </div>
 </div>
 <canvas id="c" width="480" height="480"></canvas>
 <style>
@@ -22,27 +28,23 @@
 <script>
 
 let currentColor = 'black';
-const pal = new Vue({
-  el: '#palette',
-  data: {
-    colors: [],
-  },
-  methods: {
-    colorClicked: c => {
-      currentColor = c;
-    },
-  },
-});
 
-const palettes = {
-  na16: `#8c8fae #584563 #3e2137 #9a6348 #d79b7d #f5edba #c0c741 #647d34 #e4943a #9d303b #d26471 #70377f #7ec4c1 #34859d #17434b #1f0e1c`,
+const PALETTES = {
+  NA16: `#8c8fae #584563 #3e2137 #9a6348 #d79b7d #f5edba #c0c741 #647d34 #e4943a #9d303b #d26471 #70377f #7ec4c1 #34859d #17434b #1f0e1c`,
+  'SWEETIE 16': `#1a1c2c #5d275d #b13e53 #ef7d57 #ffcd75 #a7f070 #38b764 #257179 #29366f #3b5dc9 #41a6f6 #73eff7 #f4f4f4 #94b0c2 #566c86 #333c57`,
+  PICO8: `#000000 #1D2B53 #7E2553 #008751 #AB5236 #5F574F #C2C3C7 #FFF1E8 #FF004D #FFA300 #FFEC27 #00E436 #29ADFF #83769C #FF77A8 #FFCCAA`,
+  'STEAM LORDS': `#213b25 #3a604a #4f7754 #a19f7c #77744f #775c4f #603b3a #3b2137 #170e19 #2f213b #433a60 #4f5277 #65738c #7c94a1 #a0b9ba #c0d1cc`,
+  'ENDESGA 16': `#e4a672 #b86f50 #743f39 #3f2832 #9e2835 #e53b44 #fb922b #ffe762 #63c64d #327345 #193d3f #4f6781 #afbfd2 #ffffff #2ce8f4 #0484d1`,
+  'BUBBLEGUM 16': `#16171a #7f0622 #d62411 #ff8426 #ffd100 #fafdff #ff80a4 #ff2674 #94216a #430067 #234975 #68aed4 #bfff3c #10d275 #007899 #002859`,
+  'ISLAND JOY 16': `#ffffff #6df7c1 #11adc1 #606c81 #393457 #1e8875 #5bb361 #a1e55a #f7e476 #f99252 #cb4d68 #6a3771 #c92464 #f48cb6 #f7b69e #9b9c82`,
+  'COMMODORE 64': `#000000 #626262 #898989 #adadad #ffffff #9f4e44 #cb7e75 #6d5412 #a1683c #c9d487 #9ae29b #5cab5e #6abfc6 #887ecb #50459b #a057a3`,
+  'DAWNBRINGER 16': `#140c1c #442434 #30346d #4e4a4e #854c30 #346524 #d04648 #757161 #597dce #d27d2c #8595a1 #6daa2c #d2aa99 #6dc2ca #dad45e #deeed6`,
 };
 function setPalette(p) {
-  pal.colors = palettes[p].split(/ /).map(c => new THREE.Color(c));
-  currentColor = pal.colors[0];
-  c.style.backgroundColor = pal.colors[15].getHexString();
+  vue.colors = PALETTES[p].split(/ /).map(c => new THREE.Color(c));
+  currentColor = vue.colors[0];
+  c.style.backgroundColor = vue.colors[15].getHexString();
 }
-setPalette('na16');
 
 function draw(e) {
   const [x, y] = [Math.floor(e.layerX / 16), Math.floor(e.layerY / 16)];
@@ -67,7 +69,6 @@ const [W, H] = [30, 30];
 function loadDrawing() {
   try {
     const v = JSON.parse(localStorage.getItem('drawing'));
-    console.log(v);
     if (v) return v;
   } catch (e) {}
   return 4 * W * H;
@@ -142,15 +143,31 @@ sameboy-lcd
 xbrz-freescale
 `.trim().split('\n');
 SHADERS.unshift('-none-')
-new Vue({
-  el: '#shadersdropdown',
+
+const vue = new Vue({
+  el: '#app',
   data: {
     shaders: SHADERS,
+    palettes: Object.keys(PALETTES),
+    colors: [],
   },
   methods: {
     shaderSelected: s => {
-        console.log(s.target.value);
       loadShader(s.target.value).then(s => setShader(makeShader(s)));
+    },
+    paletteSelected: p => setPalette(p.target.value),
+    colorClicked: c => {
+      currentColor = c;
+    },
+    clear: () => {
+      const c = [...currentColor.toArray(), 1];
+      for (let x = 0; x < W*H; ++x) {
+        for (let i = 0; i < 4; ++i) {
+          data[x*4 + i] = c[i]*255;
+        }
+      }
+      texture.needsUpdate = true;
+      renderer.render(scene, camera);
     },
   },
 });
@@ -166,6 +183,7 @@ async function loadShader(g) {
     return await r.text();
   }
 }
+setPalette('NA16');
 
 const mesh = new THREE.Mesh(geometry, makeShader(DEFAULTSHADER));
 scene.add(mesh);
